<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vmRegister"
            type="com.ui.account.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#92C4ED">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/homeaccess"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:layout_margin="20sp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textName"
                android:layout_marginTop="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/full_name"
                    app:error="@{vmRegister.nameError}"
                    android:text="@={vmRegister.fullName}"
                    android:drawableLeft="@drawable/ic_action_account"
                    android:drawablePadding="10dp"
                    android:paddingBottom="25dp"
                    android:background="@color/transparent"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textEmail"
                android:layout_marginTop="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:text="@={vmRegister.email}"
                    app:error="@{vmRegister.emailError}"
                    android:drawableLeft="@drawable/email_ico"
                    android:drawablePadding="10dp"
                    android:hint="@string/email_redister"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="25dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textPassword"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password_register"
                    android:drawableStart="@drawable/lock_icon"
                    app:error="@{vmRegister.passwordError}"
                    android:text="@={vmRegister.password}"
                    android:paddingBottom="25dp"
                    android:drawablePadding="10dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="20sp"
            android:textColor="@color/white"
            android:onClick="@{()->vmRegister.openMainActivity()}"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            android:textSize="20sp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:background="@drawable/login_shap"
            android:layout_margin="40dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>