<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/guideline"
                android:background="@color/second"/>
            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".4"
                android:id="@+id/guideline" />
            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:elevation="12dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:id="@+id/cardImageUser"
                    app:cardCornerRadius="40dp"
                    android:layout_centerHorizontal="true"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9">
                    <ImageView
                        android:layout_height="80dp"
                        android:layout_width="match_parent"
                        android:id="@+id/imageUser"
                        android:src="@drawable/ic_action_account"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">
                    </ImageView>
                </androidx.cardview.widget.CardView>
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal" />

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="email"
                    android:background="@color/transparent"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toBottomOf="@id/guideline"
                android:gravity="center_horizontal"
                android:background="#D6FAF7F7"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/second"
                    android:text="@string/save"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/guideline"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/deleteAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    android:textSize="20sp"
                    android:layout_marginHorizontal="20dp"
                    android:textColor="@color/black"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/icon_account"
                    android:paddingVertical="15dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#B3ABAB"/>
                <TextView
                    android:id="@+id/textChangeLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textSize="20sp"
                    android:layout_marginHorizontal="20dp"
                    android:textColor="@color/black"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/icon_language"
                    android:paddingVertical="15dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#B3ABAB"/>
                <TextView
                    android:id="@+id/logOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textSize="20sp"
                    android:layout_marginHorizontal="20dp"
                    android:textColor="@color/black"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/logout_icon"
                    android:paddingVertical="15dp"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>