<?xml version="1.0" encoding="utf-8"?>
    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:layout_marginVertical="5dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageCategory"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                tools:src="@drawable/villa"
                android:scaleType="centerCrop"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_margin="10dp"
                    android:text="2555"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/nameRoomCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Studio Apartment"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:textSize="15dp"
                    />

            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/room_sleep"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/roomNumberCategory"
                        tools:text="2"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:layout_marginHorizontal="5dp"
                        />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/room_categories"
                            />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bath_room"
                        android:layout_marginHorizontal="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bathNumberCategory"
                        tools:text="2"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:layout_marginHorizontal="5dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bath_categories"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/car_room"
                        android:layout_marginHorizontal="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/parkingNumberCategory"
                        tools:text="2"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:layout_marginHorizontal="5dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parking_categories"
                        />
                </LinearLayout>
        </LinearLayout>

    <CheckBox
        android:id="@+id/cbHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:background="@drawable/bakgroung_love"
        android:button="@drawable/selector_wishlist"
        app:useMaterialThemeColors="false" />
    </com.google.android.material.card.MaterialCardView>
