<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.chat.icon.IconDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:contentScrim="@color/second"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
            app:toolbarId="@id/toolbar">

            <ImageView
                android:id="@+id/imageDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/descriptionIconDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="20dp"
                tools:text="sstrinssssssssssssssssssssssssssssg/dummys_text"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/room_sleep"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:text="@string/room"
                    android:layout_marginHorizontal="20dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/second"/>
                <TextView
                    android:id="@+id/roomNumbeer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="ddd"
                    android:layout_gravity="center_vertical"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/bath_room"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:text="@string/bath"
                    android:layout_marginHorizontal="20dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/second"/>
                <TextView
                    android:id="@+id/bathNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="ddd"
                    android:layout_gravity="center_vertical"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/car_room"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:text="@string/parking"
                    android:layout_marginHorizontal="20dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/second"/>
                <TextView
                    android:id="@+id/parkingNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="ddd"
                    android:layout_gravity="center_vertical"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Price"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/priceIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="ddd"
                    android:layout_gravity="center_vertical"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>